--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
         }
-    ]
+    ], 
+    "python.pythonPath": "/Users/matthewwoo/envs/py3_venv2/bin/python"
 }
