--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "python.linting.pylintEnabled": false,
-    "python.linting.enabled": false,
-    "python.pythonPath": "/Users/matthewwoo/envs/py3_venv2/bin/python",
-    "python.linting.flake8Enabled": true
+    "python.pythonPath": "/Users/matthewwoo/envs/py3_venv2/bin/python"
 }
